$Id: ChangeLog,v 1.4 2003/07/20 18:36:58 haraldkipp Exp $

2003-07-20  Harald Kipp  <harald.kipp@egnite.de>

	* pro/httpd.c: Reduced RAM usage by moving string
	literals to program space.

	* net/ipout.c: Memory hole bugfix.

	* net/udpsock.c: System crash on UDP send failure
	has been fixed.

	* app/httpd: Redesigned HTTP server sample added.

	* dev: New Ethernet driver for CS8900A.

	* crt/vsscanf.c: Bugfix for sscanf functions.

	* crt/sprintf_p.c: Bugfix.

	* crt/filelength.c: Wrong description replaced.

	* pro/dhcpc.c: Added code to support secondary DNS.

	* pro/resolve.c: Dito.

	* No explanation had been given how to disable the
	timeout of several functions using NutEventWait().
	A defined value of NUT_WAIT_INFINITE has been added
	to event.h.

	* Missing directories added to repository.


2003-07-17  Harald Kipp  <harald.kipp@egnite.de>

	* dev/hd44780.c: Works with applications which may
	change the data direction registers.

	* dev/nicrtl.c: Speed enhancements and being less
	strictly for accepting valid frames.

	* dev/twif.c: Missing speed settings added.

	* pro/dhcpc.c: No more default (egnite) MAC address.

	* pro/httpd.c: Memory hole fixed.


2003-07-13  Harald Kipp  <harald.kipp@egnite.de>

	* ChangeLog: Added.

	* net/confnet.c: Unconfigured MAC address changed to
	broadcast address.

	* net/tcpsm.c: Changing the socket data buffer into
	a NETBUF queue results in faster TCP transfers.

	* net/tcpsock.c: dito.

	* include/sys/sock_var.h: dito.